[package]
name = "conclusive"
description = "A command line client for Plausible Analytics"
version = "0.1.0"
authors = ["マリウス <marius@xn--gckvb8fzb.com>"]
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
homepage = "https://xn--gckvb8fzb.com/conclusive-a-command-line-client-for-plausible-analytics/"
repository = "https://github.com/mrusme/conclusive"
keywords = ["cli", "tui", "plausible", "analytics", "tool"]
categories = ["command-line-utilities"]

[dependencies]
tui = "0.14"
termion = "1.5"
argh = "0.1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"
