[package]
name = "conclusive"
description = "A command line client for Plausible Analytics"
version = "1.0.0"
authors = ["マリウス <marius@xn--gckvb8fzb.com>"]
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
homepage = "https://xn--gckvb8fzb.com/conclusive-a-command-line-client-for-plausible-analytics/"
repository = "https://github.com/mrusme/conclusive"
keywords = ["cli", "tui", "plausible", "analytics", "tool"]
categories = ["command-line-utilities"]

[dependencies]
tui = { version = "0.18", default-features = false, features = ['termion'] }
termion = "1.5"
argh = "0.1.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = "3.2.16"
